--- a/css/style.css
+++ b/css/style.css
@@ -108,12 +108,15 @@ p {
 }
 
 .client-group {
+  width: 100%;
   display: flex;
+  gap: 2rem;
   justify-content: space-between;
   align-items: center;
 }
+
 .client-group > * {
-  max-width: 20%;
+  min-width: 0;
 }
 
 @media screen and (max-width: 600px) {
