--- a/css/style.css
+++ b/css/style.css
@@ -159,7 +159,16 @@ p {
   .hero-content {
     max-width: 500px;
     grid-column-start: 1;
-    align-self: center;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .hero-content div:first-child {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
   }
 }
 
