--- a/css/style.css
+++ b/css/style.css
@@ -31,10 +31,9 @@ html {
 }
 
 body {
-  /* padding-top: 5rem; to be removed*/
-  /* padding-left: 5rem; to be removed */
   font-family: "Epilogue", Arial, Helvetica, sans-serif;
   color: var(--color-grey);
+  min-height: 100vh;
 }
 
 h1 {
@@ -298,10 +297,15 @@ p {
   text-align: center;
 }
 .attribution a {
-  color: hsl(228, 45%, 44%);
+  color: var(--color-black);
+  font-weight: var(--fw-bold);
 }
 
-@media screen and (max-width: 600px) {
+.attribution a:hover {
+  color: var(--color-grey);
+}
+
+@media screen and (max-width: 599px) {
   .hero-content {
     width: 90%;
     margin-inline: auto;
@@ -315,6 +319,7 @@ p {
     grid-template-columns: repeat(2, minmax(100px, 1fr));
     grid-auto-flow: dense;
     grid-column-gap: 4rem;
+    padding-block: 3rem 5rem;
   }
 
   .hero__img {
